--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-database.php
-config/database.php
+# database.php
+# config/database.php
