--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/jetstream": "^2.2",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-activitylog": "^3.17",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
