--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
         "tailwindcss": "^2.0.1",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "chart.js": "^2.9.4",
+        "vue3-chart-v2": "^0.8.1"
     }
 }
